[workspace]
members = [
    "hinawa/sys",
    "hinawa",
]

exclude = [
    "gir",
]

default-members = [
    "hinawa",
]

# For my convenience to generate README.md for each crates by my tool.
[workspace.metadata.library.hinawa]
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/libhinawa.git/"
purpose = """
operate 1394 OHCI hardware via Linux FireWire character device for asynchronous communication in
IEEE 1394 bus.
"""
