[package]
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
build = "build.rs"
description = "FFI bindings for libhinawa2 library"
edition = "2021"
license = "MIT"
links = "hinawa"
name = "hinawa-sys"
repository = "https://github.com/alsa-project/hinawa-rs/"
rust-version = "1.57"
version = "0.5.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hinawa]
name = "hinawa"
version = "2.4"

[lib]
name = "hinawa_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v2_1 = []
v2_2 = []
v2_3 = []
v2_4 = []
