[package]
build = "build.rs"
edition = "2018"
links = "hinawa"
name = "hinawa-sys"
version = "0.6.0"
# For publishing.
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
description = "FFI bindings for libhinawa2 library"
license = "MIT"
repository = "https://github.com/alsa-project/hinawa-rs/"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hinawa]
name = "hinawa"
version = "2.5"

[lib]
name = "hinawa_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
