[package]
build = "build.rs"
edition = "2018"
links = "hinawa"
name = "hinawa-sys"
version = "0.7.1"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI bindings for hinawa library"
documentation = "https://docs.rs/hinawa-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib", "ffi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/hinawa-rs/"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.hinawa]
name = "hinawa"
version = "2.5"

[lib]
name = "hinawa_sys"

[build-dependencies]
pkg-config = "0.3.7"
# To avoid MSRV in cfg-expr against rustc 1.66.
system-deps = "=6.0.4"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15"

[dependencies.gobject]
package = "gobject-sys"
version = "0.15"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
# To suppress linking to C library when generating documentation.
dox = []
