[package]
edition = "2018"
name = "hinawa"
version = "0.0.90"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hinawa library"
documentation = "https://docs.rs/hinawa/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/hinawa-rs/"

[lib]
name = "hinawa"

[dependencies]
libc = "0.2"
glib = "0.15"
ffi = {package = "hinawa-sys", path = "../hinawa-sys", version = "0.0"}

[dev-dependencies]
gir-format-check = "^0.1"
