[package]
edition = "2018"
name = "hinawa"
version = "0.7.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hinawa library"
documentation = "https://docs.rs/hinawa/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinawa-rs.git/"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "hinawa"

[dependencies]
libc = "0.2"
glib = "0.15"
ffi = {package = "hinawa-sys", path = "../hinawa-sys", version = "0.7.0"}

[dev-dependencies]
gir-format-check = "^0.1"

[features]
# To suppress linking to C library when generating documentation.
dox = ["ffi/dox", "glib/dox"]
