[package]
edition = "2021"
name = "hinawa"
version = "0.10.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]
description = "API bindings for hinawa library"
documentation = "https://docs.rs/hinawa/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib"]
license = "MIT"
readme = "README.md"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinawa-rs.git/"
[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "hinawa"

[dependencies]
libc = "0.2"
glib = "0.18"
ffi = {package = "hinawa-sys", version = "0.10.0"}

[dev-dependencies]
gir-format-check = "^0.1"

[features]
