[package]
build = "build.rs"
edition = "2021"
links = "hinawa"
name = "hinawa-sys"
version = "0.10.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["external-ffi-bindings", "hardware-support", "os::linux-apis"]
description = "FFI bindings for hinawa library"
documentation = "https://docs.rs/hinawa-sys/"
exclude = ["Gir.toml"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["ieee1394", "firewire", "linux", "glib", "ffi"]
license = "MIT"
readme = "README.md"
repository = "https://git.kernel.org/pub/scm/libs/ieee1394/hinawa-rs.git/"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[package.metadata.system-deps.hinawa]
name = "hinawa"
version = "4.0"

[lib]
name = "hinawa_sys"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.18"

[dependencies.gobject]
package = "gobject-sys"
version = "0.18"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
